<resources>
    <!-- Global String References ===============================================================-->
    <string name="app_name">Simple Inheritance App</string>

    <!-- Global Toast References ================================================================-->
    <string name="toast_empty_input_fields">Input Fields Are Empty</string>
    <string name="toast_invalid_shares_input">Shares Must Be A Number</string>
    <string name="toast_invalid_net_worth_input">Net Worth Must Be A Number</string>

    <!-- Global Logging References ================================================================-->
    <string name="log_initialized">Initialized</string>

    <!-- activity_main.xml ======================================================================-->
    <string name="main_title_text">Inheritors</string>
    <string name="main_name_colontext">Name: </string>
    <string name="main_name_hinttext">John Smith</string>
    <string name="main_shares_colontext">Shares: </string>
    <string name="main_shares_hinttext">100</string>
    <string name="main_net_worth_colontext">Net Worth: </string>
    <string name="main_net_worth_hinttext">$100,000.00</string>
    <string name="main_add_inheritor_text">Add Inheritor</string>

    <!-- card_inheritor_item.xml ================================================================-->
    <string name="card_inheritor_name_text">John Smith </string>
    <string name="card_inheritor_will_receive_text">will receive $</string>
    <string name="card_inheritor_inheritance_text">100.00 </string>
    <string name="card_inheritor_from_text">from </string>
    <string name="card_inheritor_amount_of_shares_text">10 </string>
    <string name="card_inheritor_shares_text">shares.</string>
</resources>